--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <li><a href="https://twitter.com/madukdnb">Maduk</a></li>
     <li><a href="https://twitter.com/ILLENIUM?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Illenium</a></li>
   </ul>
+  <hr size="3" noshade>
   <h3>Work Experience</h3>
   <table cellspacing="10">
     <thead>
